align now date; show missing-value correctly

--- a/styles/pages/group.scss
+++ b/styles/pages/group.scss
@@ -1325,6 +1325,7 @@ main.invitation {
         justify-content: flex-end;
 
         .collapse-invitation {
+          width: 10%;
           color: constants.$subtleGray;
           margin-right: 0.25rem;
           cursor: pointer;
@@ -1332,7 +1333,7 @@ main.invitation {
         }
 
         .cdate {
-          width: 95%;
+          width: 90%;
           float: right;
         }
 
